# muir

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  build.sh
.circleci/: config.yml
.clangd/index/: APFloat.h.5A46744A8310D24E.idx  APInt.h.51154336F4B9AE4D.idx  AliasAnalysis.h.7605DAD60197CAD9.idx  AliasEdgeWriter.cpp.53A7C06B8A0FD892.idx  AliasEdgeWriter.h.5D82425E3DFAA255.idx  AlignOf.h.40C893955146CA94.idx  Allocator.h.A9A515AB25004854.idx  Argument.h.51959CBEDCBDBE25.idx  ArrayRef.h.372594B7FBE84D10.idx  AssumptionCache.h.8D3710734583CCD0.idx  Atomic.h.58B80A9CD62464AE.idx  AtomicOrdering.h.87A3AFACBD860215.idx  Attributes.h.BD93DDBD280FF0A2.idx  BasicAliasAnalysis.h.4DF4B5A6232702FB.idx  BasicBlock.h.254E6E737C2222D5.idx  BasicBlockUtils.h.F55264A7EE2E7F0E.idx  BitcodeWriter.h.304B1BC77343AD2C.idx  BitmaskEnum.h.54EC4F251EC426BA.idx  CBindingWrapping.h.820819006906D339.idx  CFG.h.11F1F9BCA17D516B.idx  CFG.h.D134396BDACA3855.idx  CFLAliasAnalysisUtils.h.5DEEC771950BBDEE.idx  CFLAndersAliasAnalysis.h.4C52C4B61CD683BD.idx  CachedHashString.h.D1A19ED13947CDC5.idx  CallGraph.h.CCDE9E661828B45B.idx  CallSite.h.E1D0FB57BF7D0B12.idx  CallingConv.h.9B6240E2A5A287B5.idx  Casting.h.E6C0798E2CBA369D.idx  Chrono.h.2BA2CF6F35E12E5E.idx  Cloning.h.D1A7FB0BF1AAA444.idx  CodeExtractor.h.C5D47A1ADFCF6992.idx  CodeGen.h.802DF1D3B841E997.idx  Comdat.h.97504283E4D1C61D.idx  CommandFlags.def.B29B2F29D2FFC46F.idx  CommandLine.h.EF26D88B903E24EC.idx  Common.cpp.1FD73339D795AB38.idx  Common.h.7BEA042CDC967147.idx  Compiler.h.4496257098EE8C27.idx  Constant.h.3E38B22FD97292EA.idx  ConstantFolder.h.588945E65A6CEF50.idx  (+195 more)
docs/: pull_request_template.md
include/: AliasEdgeWriter.h  AliasMem.h  Common.h  DataflowGenerator.h  DebugInfo.h  GEPSplitter.h  GraphGeneratorPass.h  InfixIterator.h  LoopClouser.h  NodeType.h  Parser.h  TargetLoopExtractor.h  iterator_range.h
include/Dandelion/: Edge.h  Graph.h  MemoryNode.h  Node.h
include/Xketch/Node/: Argument.h  Function.h  Node.h  Type.h
lib/: CMakeLists.txt
lib/codegen/: CMakeLists.txt  DataflowGenerator.cpp
lib/common/: CMakeLists.txt  Common.cpp  Helpers.cpp
lib/debug-info/: CMakeLists.txt  DebugInfo.cpp
lib/gepsplitter-inst/: CMakeLists.txt  GEPSplitter.cpp
lib/graphgen/: CMakeLists.txt  Graph.cpp  GraphGeneratorPass.cpp  Node.cpp
lib/loop-clouser/: CMakeLists.txt  LoopClouser.cpp
lib/lx/: CMakeLists.txt  TargetLoopExtractor.cpp
lib/memalias/: AliasEdgeWriter.cpp  AliasMem.cpp  CMakeLists.txt
lib/parser/: CMakeLists.txt  Parser.cpp
lib/xketchgen/: CMakeLists.txt  DataFlowGenerator.cpp
scripts/: cilk_for_test01.ll  cilk_for_test12.ll  cilk_for_test12a.ll  colors.sh  config.json  dandelion.sh  muir-setup.sh  setup.sh  test02.ll  test05.ll
scripts/debug_node/: add_debug.py  test03.scala  test03.summary.json
test/: alias.bc  alias.c  alias.ll  alias.lx.bc  alias.lx.ll  alis-n.ll  matrix.bc
test/NewTest/: int_exp.bc  int_exp.c  int_exp.ll  int_exp.scala  int_exp_test.scala
test/bc/: fft.bc  kmp.bc  spmv.bc  test01.bc  test02.bc  test03.bc  test06.bc
test/c/: .cfg.foo.dot.swo  Makefile  aew.stats.txt  alias.c  amem.stats.txt  branch.c  cfg.foo.dot  cfg.main.dot  cfg.test03.dot  cfg.test07.dot  cfg.test08.dot  cfg.test09.dot  cfg.test10.dot  conv2d.c  final.bc  for.c  loop.c  saxpy.c  test.c  test01.c  test01.ll  test02.c  test03.c  test03.dot  test03.ll  test03.scala  test03_test.scala  test04.c  test04.ll  test05.c  test05.ll  test06-load.c  test06-load.ll  test06.c  test07.c  test07.dot  test07.ll  test07.scala  test07_test.scala  test08.c  (+29 more)
test/c/bfs-bulk/: .bfs.o.bc  .harness.o.bc  .local_support.o.bc  Makefile
test/c/cache/: test_cache01.c  test_cache01.final.bc  test_cache02.final.bc  test_cache03.c  test_cache03.final.bc
test/c/cilk/: Makefile  bc  bgemm.c  cilk_for_test01.c  cilk_for_test02.c  cilk_for_test03.c  cilk_for_test04.c  cilk_for_test05.c  cilk_for_test06.c  cilk_for_test07.c  cilk_for_test08.c  cilk_for_test09.c  cilk_for_test10.c  cilk_for_test11.c  cilk_for_test12.c  cilk_saxpy.c  cilk_spawn_test01.c  cilk_spawn_test02.c  dedup.c  fib.c  gcd_cilk.c  int_exp.c  mergesort.c  nqueens.c  reduction.c  saxpy.c  serial_for_test06.c  sor-serial.c  sor.c  stencil.c  vector_scale.c
test/c/cilk_for/: Makefile  int_exp.c  trivial_for.c
test/c/float/: Makefile  test01.c  test02.c  testf01.final.bc  testf02.final.bc
test/c/fpga/: Makefile  add_example.c  add_example_fpga.c  add_example_sim.c
test/c/recursion/: Makefile  fib.c
test/c/type/: Makefile  README  conv2d.cpp  matadd.cpp  matmul.cpp  test.c  test.cpp  tile.h
test/ll/: new.bc  new.ll  test01.ll  test02.ll  test07.ll
test/meeting/: loop.c  loop.ll  test.scala
test/ml/: Makefile  edite.py  test_01_vecmul_a_ir_4.bc  test_02_vecmul_b_ir_4.bc  test_03_vecmul_b_f_ir_4.bc  test_04_dense_a_ir_4.bc  test_05_dense_b_ir_4.bc  test_05_dense_b_ir_4.ll  test_06_softmax_a_ir_4.bc  test_07_softmax_b_ir_4.bc  test_07_softmax_b_ir_4.ll  test_09_conv2d_a_ir_4.bc  test_09_conv2d_a_ir_4.ll  test_11_conv2d_b_ir_4.bc  test_11_conv2d_b_ir_4.ll  test_12_maxp_a_ir_4.bc  test_13_maxp_b_ir_4.bc  test_13_maxp_b_ir_4.ll  test_15_thxprlsg_ir_4.bc
tests/bc/Machsuite/: Makefile  common.mk
tests/c/: Makefile  conv2d.c  conv2dSerial.c  conv2dUnroll.c  conv2dUnroll.scala  func.c  relu.c  saxpy.c  stencil-serial.c  test01.c  test02.c  test04.c  test05.c  test07.c  test08.c  test09.c  test11.c  test12.c  test13.c  test14.c  test15.c  vadd.c  vector_scale.c
tests/c/bfs/: serialBFS.ll
tests/c/bfs-bulk/: cilk_bfs.c
tests/c/cache/: test_cache02.c
tests/c/cilk/: bgemm.c  fib.c  saxpy.c  (+6 more)
tests/ll/: test01.ll  test03.ll  test06.ll
tests/ml/: test_01_vecmul_a_ir_4.ll  test_02_vecmul_b_ir_4.ll  test_03_vecmul_b_f_ir_4.ll  test_04_dense_a_ir_4.ll  test_06_softmax_a_ir_4.ll  test_12_maxp_a_ir_4.ll  test_15_thxprlsg_ir_4.ll
tools/: CMakeLists.txt
tools/dandelion/: CMakeLists.txt  main.cpp
tools/debug-helper/: CMakeLists.txt  main.cpp
tools/tapir-extract/: CMakeLists.txt  main.cpp
tools/xketch/: CMakeLists.txt  main.cpp
(+71 files in other folders)
